@@ -195,7 +195,11 @@ final class TestDebugger(
         if (
           !output.contains("Picked up JAVA_TOOL_OPTIONS") &&
           !output.contains("transport error 202: send failed: Broken pipe") &&
-          !output.contains("WARNING: A terminally deprecated method in sun.misc.Unsafe has been called")
+          !output.contains("WARNING: A terminally deprecated method in sun.misc.Unsafe has been called") &&
+          !output.contains("WARNING: sun.misc.Unsafe") &&
+          !output.contains("WARNING: Please consider reporting this to the maintainers") &&
+          !output.contains("WARNING: Use --enable-native-access=ALL-UNNAMED") &&
+          !output.contains("WARNING: Restricted methods will be blocked in a future release")
         )
           fail(new IllegalStateException(output))
       case _ =>
